[gd_scene load_steps=15 format=1]

[ext_resource path="res://scripts/super_bossface.gd" type="Script" id=1]
[ext_resource path="res://images/enemies/super_boss_wall.png" type="Texture" id=2]
[ext_resource path="res://images/enemies/super_boss_face.png" type="Texture" id=3]
[ext_resource path="res://audio/boss_hurt.wav" type="Sample" id=4]
[ext_resource path="res://audio/long_explosion.wav" type="Sample" id=5]
[ext_resource path="res://audio/voice_samples/ninja 2/ninja2_cometothis.wav" type="Sample" id=6]
[ext_resource path="res://audio/voice_samples/ninja 2/ninja2_beatme.wav" type="Sample" id=7]
[ext_resource path="res://audio/voice_samples/big dude/BigDude_herekitty.wav" type="Sample" id=8]

[sub_resource type="ConvexPolygonShape2D" id=1]

custom_solver_bias = 0.0
points = Vector2Array( -46.545, -99.243, 1.45502, -99.243, 1.45502, 44.757, -46.545, -3.243 )

[sub_resource type="Animation" id=2]

resource/name = "death"
length = 3.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("face:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.1, 0.4 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 1,
"values": [ 1, 0, 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("face:modulate")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("face:visibility/opacity")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.7, 0.9, 1, 1.2, 1.4, 1.5, 1.7, 1.9, 2, 2.2, 2.4, 2.5, 2.7, 2.9 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0, 1.0, 0.0, 1.0, 0.0, 1.0, 0.0, 0.0, 1.0, 0.0, 0.0, 1.0, 0.0, 0.0, 1.0, 0.0, 0.0, 1.0, 0.0 ]
}

[sub_resource type="Animation" id=3]

resource/name = "face"
length = 3.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("face:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.1, 0.2, 0.4, 0.6, 0.8, 0.9, 1.1, 1.3, 1.4, 1.6, 1.7, 1.9, 2.1, 2.3, 2.5, 2.7, 2.9 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 6, 5, 6, 2, 4, 5, 6, 1, 1, 2, 3, 4, 6 ]
}

[sub_resource type="Animation" id=4]

resource/name = "hurt"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("face:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.4, 0.5, 0.7, 0.9 ),
"transitions": FloatArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 4, 1, 2, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("face:modulate")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 1 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=5]

resource/name = "idle"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("face:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="SampleLibrary" id=6]

samples/boss_hurt = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 4 )
}
samples/long_explosion = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 5 )
}
samples/talk_1 = {
"db": 10.0,
"pitch": 0.5,
"priority": 0,
"sample": ExtResource( 6 )
}
samples/talk_2 = {
"db": 10.0,
"pitch": 0.5,
"priority": 0,
"sample": ExtResource( 7 )
}
samples/talk_3 = {
"db": 10.0,
"pitch": 0.5,
"priority": 0,
"sample": ExtResource( 8 )
}

[node name="super_boss_face" type="KinematicBody2D" groups=[
"enemies",
]]

transform/pos = Vector2( 574.545, 115.243 )
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 1 )

[node name="wall" type="Sprite" parent="."]

transform/pos = Vector2( 11.4554, -9.24295 )
texture = ExtResource( 2 )

[node name="face" type="Sprite" parent="."]

transform/pos = Vector2( 11.455, -9.243 )
texture = ExtResource( 3 )
vframes = 2
hframes = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/death = SubResource( 2 )
anims/face = SubResource( 3 )
anims/hurt = SubResource( 4 )
anims/idle = SubResource( 5 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "face"

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]

visibility/visible = false
build_mode = 0
polygon = Vector2Array( -46.545, -3.243, 1.45502, 44.757, 1.45502, -99.243, -46.545, -99.243 )
shape_range = Vector2( 0, 0 )
trigger = false

[node name="cannon_1" type="Position2D" parent="."]

transform/pos = Vector2( 11.455, 22.757 )

[node name="cannon_2" type="Position2D" parent="."]

transform/pos = Vector2( 11.455, -4.71352 )

[node name="SamplePlayer2D" type="SamplePlayer2D" parent="."]

params/volume_db = 0.0
params/pitch_scale = 1.0
params/attenuation/min_distance = 1.0
params/attenuation/max_distance = 2048.0
params/attenuation/distance_exp = 1.0
config/polyphony = 1
config/samples = SubResource( 6 )
config/pitch_random = 0.0

[node name="Timer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="cannon_timer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false


